fix: comment content overflow

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -357,6 +357,7 @@ $gt-size-avatar-mobi := em(32px)
       margin-left: em(20px)
       padding: em(12px) em(16px)
       background-color: $gt-color-comment-bg
+      overflow: auto
       transition: all ease 0.25s
       &:hover
         box-shadow: 0 em(10px) em(60px) 0 darken($gt-color-comment-bg, 2%)
